--- a/index.html
+++ b/index.html
@@ -1,49 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="main.css">
-  <title>Frontend Mentor | Interactive rating component</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="main.css" />
+    <title>Interactive rating component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body class="bg-red-500">
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+      }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+    </style>
+  </head>
+  <body class="flex items-center justify-center h-screen bg-veryDarkBlue">
+    <!-- Rating state start -->
+    <main class="w-96 p-5 bg-darkBlue text-white rounded-2xl shadow-lg">
+      <div class="star">star</div>
+      <div>
+        <h1 class="text-xl font-semibold my-1 text-white">How did we do?</h1>
+        <p class="desc text-lightGrey">
+          Please let us know how we did with your support request. All feedback
+          is appreciated to help us improve our offering!
+        </p>
+      </div>
+      <form action="#">
+        <div class="ratings my-2">
+          <label class="form-control">
+            <input type="radio" name="radio" />
+            1
+          </label>
+          <label class="form-control">
+            <input type="radio" name="radio" />
+            2
+          </label>
+          <label class="form-control">
+            <input type="radio" name="radio" />
+            3
+          </label>
+          <label class="form-control">
+            <input type="radio" name="radio" />
+            4
+          </label>
+          <label class="form-control">
+            <input type="radio" name="radio" />
+            5
+          </label>
+        </div>
+        <button type="submit" class="w-full bg-orange rounded-xl font-medium py-1 uppercase">Submit</button>
+      </form>
+    </main>
+    <!-- Rating state end -->
 
-  <!-- Rating state start -->
+    <!-- Thank you state start -->
 
-  How did we do?
+    <!-- You selected
+    Add rating here 
+    out of 5 Thank you! We appreciate you taking the time to give a rating. If
+    you ever need more support, don’t hesitate to get in touch! -->
 
-  Please let us know how we did with your support request. All feedback is appreciated 
-  to help us improve our offering!
-
-  1 2 3 4 5
-
-  Submit
-
-  <!-- Rating state end -->
-
-  <!-- Thank you state start -->
-
-  You selected <!-- Add rating here --> out of 5
-
-  Thank you!
-
-  We appreciate you taking the time to give a rating. If you ever need more support, 
-  don’t hesitate to get in touch!
-
-  <!-- Thank you state end -->
-
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <!-- Thank you state end -->
+<!-- 
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">Your Name Here</a>.
+    </div> -->
+  </body>
 </html>
