--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       href="./images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="main.css" />
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Interactive rating component</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
