--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
         <button
           type="submit"
-          class="w-full bg-orange-600 rounded-xl font-medium py-1 uppercase"
+          class="w-full bg-orange-500 rounded-xl font-medium py-1 uppercase hover:bg-white hover:text-orange"
         >
           Submit
         </button>
