--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Interactive rating component</title>
   </head>
-  <body class="flex items-center justify-center h-screen bg-veryDarkBlue">
+  <body
+    class="flex flex-col items-center justify-center h-screen bg-veryDarkBlue text-sm"
+  >
     <!-- Rating state start -->
-    <main class="w-96 p-5 bg-darkBlue text-white rounded-2xl shadow-lg">
-      <div class="star w-8 h-8 flex items-center justify-center rounded-2xl bg-veryDarkBlue">
-        <img src="images/icon-star.svg" alt="">
+    <main class="hidden w-96 p-5 bg-darkBlue text-white rounded-2xl shadow-lg">
+      <div
+        class="star w-8 h-8 flex items-center justify-center rounded-2xl bg-veryDarkBlue"
+      >
+        <img src="images/icon-star.svg" alt="" />
       </div>
       <div>
         <h1 class="text-xl font-semibold my-1 text-white">How did we do?</h1>
@@ -62,19 +66,25 @@
     <!-- Rating state end -->
 
     <!-- Thank you state start -->
-
-    <!-- You selected
-    Add rating here 
-    out of 5 Thank you! We appreciate you taking the time to give a rating. If
-    you ever need more support, don’t hesitate to get in touch! -->
+    <section
+      class="thankYou w-96 px-5 py-8 bg-darkBlue text-white rounded-2xl shadow-lg text-center"
+    >
+      <img class="mx-auto mb-7" src="images/illustration-thank-you.svg" alt="" />
+      <p class="ratings bg-gray-700 w-fit mx-auto py-1 px-4 rounded-2xl mb-8 text-orange">You selected <span>1</span> out of 5.</p>
+      <h1 class="text-xl font-medium mb-3">Thank you!</h1>
+      <p class="desc text-lightGrey">
+        We appreciate you taking the time to give a rating. If you ever need
+        more support, don’t hesitate to get in touch!
+      </p>
+    </section>
 
     <!-- Thank you state end -->
-    <!-- 
+
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Your Name Here</a>.
-    </div> -->
+    </div>
   </body>
 </html>
