adjust footer at end

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     class="flex flex-col items-center justify-center h-screen bg-veryDarkBlue text-sm"
   >
     <!-- Rating state start -->
-    <main class="hidden w-96 p-5 bg-darkBlue text-white rounded-2xl shadow-lg">
+    <main class=" w-96 p-5 bg-darkBlue text-white rounded-2xl shadow-lg">
       <div
         class="star w-8 h-8 flex items-center justify-center rounded-2xl bg-veryDarkBlue"
       >
@@ -67,7 +67,7 @@
 
     <!-- Thank you state start -->
     <section
-      class="thankYou w-96 px-5 py-8 bg-darkBlue text-white rounded-2xl shadow-lg text-center"
+      class="hidden thankYou w-96 px-5 py-8 bg-darkBlue text-white rounded-2xl shadow-lg text-center"
     >
       <img class="mx-auto mb-7" src="images/illustration-thank-you.svg" alt="" />
       <p class="ratings bg-gray-700 w-fit mx-auto py-1 px-4 rounded-2xl mb-8 text-orange">You selected <span>1</span> out of 5.</p>
@@ -80,11 +80,11 @@
 
     <!-- Thank you state end -->
 
-    <div class="attribution">
+    <div class="attribution absolute bottom-0 text-white text-sm pb-1">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="#">Numan Iftikhar</a>.
     </div>
   </body>
 </html>
