--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     class="flex flex-col items-center justify-center h-screen bg-veryDarkBlue text-sm"
   >
     <!-- Rating state start -->
-    <main class=" w-96 p-5 bg-darkBlue text-white rounded-2xl shadow-lg">
+    <main class="ratingCard w-96 p-5 bg-darkBlue text-white rounded-2xl shadow-lg">
       <div
         class="star w-8 h-8 flex items-center justify-center rounded-2xl bg-veryDarkBlue"
       >
@@ -57,7 +57,7 @@
         </div>
         <button
           type="submit"
-          class="w-full bg-orange-500 rounded-xl font-medium py-1 uppercase hover:bg-white hover:text-orange"
+          class="submitBtn w-full bg-orange-500 rounded-xl font-medium py-1 uppercase hover:bg-white hover:text-orange"
         >
           Submit
         </button>
@@ -67,7 +67,7 @@
 
     <!-- Thank you state start -->
     <section
-      class="hidden thankYou w-96 px-5 py-8 bg-darkBlue text-white rounded-2xl shadow-lg text-center"
+      class="thankYouCard hidden thankYou w-96 px-5 py-8 bg-darkBlue text-white rounded-2xl shadow-lg text-center"
     >
       <img class="mx-auto mb-7" src="images/illustration-thank-you.svg" alt="" />
       <p class="ratings bg-gray-700 w-fit mx-auto py-1 px-4 rounded-2xl mb-8 text-orange">You selected <span>1</span> out of 5.</p>
@@ -86,5 +86,7 @@
         >Frontend Mentor</a
       >. Coded by <a href="#">Numan Iftikhar</a>.
     </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
