add check func to custom radio buttons

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Rating state start -->
     <main class="ratingCard w-96 p-5 bg-darkBlue text-white rounded-2xl shadow-lg">
       <div
-        class="star w-8 h-8 flex items-center justify-center rounded-2xl bg-veryDarkBlue"
+        class="star w-10 h-10 flex items-center justify-center rounded-3xl bg-gray-700"
       >
         <img src="images/icon-star.svg" alt="" />
       </div>
@@ -36,23 +36,18 @@
         <div class="ratings my-2">
           <label class="form-control">
             <input type="radio" name="radio" />
-            1
           </label>
           <label class="form-control">
             <input type="radio" name="radio" />
-            2
           </label>
           <label class="form-control">
             <input type="radio" name="radio" />
-            3
           </label>
           <label class="form-control">
             <input type="radio" name="radio" />
-            4
           </label>
           <label class="form-control">
             <input type="radio" name="radio" />
-            5
           </label>
         </div>
         <button
