style buttons as RB

--- a/index.html
+++ b/index.html
@@ -34,23 +34,15 @@
           is appreciated to help us improve our offering!
         </p>
       </div>
-      <form action="#">
-        <div class="ratings my-6 flex justify-between">
-          <label class="form-control">
-            <input type="radio" name="radio" value="1" />
-          </label>
-          <label class="form-control">
-            <input type="radio" name="radio" value="2" />
-          </label>
-          <label class="form-control">
-            <input type="radio" name="radio" value="3" />
-          </label>
-          <label class="form-control">
-            <input type="radio" name="radio" value="4" />
-          </label>
-          <label class="form-control">
-            <input type="radio" name="radio" value="5" />
-          </label>
+      <div>
+        <div class="ratings my-6 ">
+          <ul class="flex justify-between items-center">
+            <li><button class="radio-btn">1</button></li>
+            <li><button class="radio-btn">2</button></li>
+            <li><button class="radio-btn">3</button></li>
+            <li><button class="radio-btn">4</button></li>
+            <li><button class="radio-btn">5</button></li>
+          </ul>
         </div>
         <button
           type="button"
@@ -58,7 +50,7 @@
         >
           Submit
         </button>
-      </form>
+      </div>
     </main>
     <!-- Rating state end -->
 
