add footer styling

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </p>
       </div>
       <div>
-        <div class="ratings my-6 ">
+        <div class="ratings my-6">
           <ul class="flex justify-between items-center">
             <li><button class="radio-btn">1</button></li>
             <li><button class="radio-btn">2</button></li>
@@ -77,13 +77,21 @@
 
     <!-- Thank you state end -->
 
-    <div class="attribution absolute bottom-0 text-white text-sm pb-1">
+    <div class="absolute bottom-0 text-white text-sm pb-1">
       Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+      <a
+        class="text-blue-500 underline"
+        href="https://www.frontendmentor.io?ref=challenge"
+        target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Numan Iftikhar</a>.
+      >. Coded by
+      <a
+        class="text-blue-500 underline"
+        href="https://www.frontendmentor.io/profile/numan-iftikhar"
+        >Numan Iftikhar</a
+      >.
     </div>
 
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
   </body>
 </html>
