--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
       <div>
         <div class="ratings my-6">
           <ul class="flex justify-between items-center">
-            <li><button class="radio-btn">1</button></li>
-            <li><button class="radio-btn">2</button></li>
-            <li><button class="radio-btn">3</button></li>
-            <li><button class="radio-btn">4</button></li>
-            <li><button class="radio-btn">5</button></li>
+            <li><button class="radio-btn transition ease-in-out duration-300">1</button></li>
+            <li><button class="radio-btn transition ease-in-out duration-300">2</button></li>
+            <li><button class="radio-btn transition ease-in-out duration-300">3</button></li>
+            <li><button class="radio-btn transition ease-in-out duration-300">4</button></li>
+            <li><button class="radio-btn transition ease-in-out duration-300">5</button></li>
           </ul>
         </div>
         <button
           type="button"
-          class="submitBtn w-full bg-orange-500 rounded-2xl font-medium py-2 uppercase hover:bg-white hover:text-orange"
+          class="submitBtn w-full bg-orange-500 rounded-2xl font-medium py-2 uppercase hover:bg-white hover:text-orange transition ease-in-out duration-300"
         >
           Submit
         </button>
