fix script path

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
 
     <link
       rel="icon"
@@ -11,7 +10,7 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="./main.css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Interactive rating component</title>
   </head>
@@ -92,6 +91,6 @@
       >.
     </div>
 
-    <script src="script.js" defer></script>
+    <script src="./script.js" defer></script>
   </body>
 </html>
