add role radio to btns

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
       <div>
         <div class="ratings my-6">
           <ul class="flex justify-between items-center">
-            <li><button class="radio-btn transition ease-in-out duration-300">1</button></li>
-            <li><button class="radio-btn transition ease-in-out duration-300">2</button></li>
-            <li><button class="radio-btn transition ease-in-out duration-300">3</button></li>
-            <li><button class="radio-btn transition ease-in-out duration-300">4</button></li>
-            <li><button class="radio-btn transition ease-in-out duration-300">5</button></li>
+            <li><button role="radio" class="radio-btn transition ease-in-out duration-300">1</button></li>
+            <li><button role="radio" class="radio-btn transition ease-in-out duration-300">2</button></li>
+            <li><button role="radio" class="radio-btn transition ease-in-out duration-300">3</button></li>
+            <li><button role="radio" class="radio-btn transition ease-in-out duration-300">4</button></li>
+            <li><button role="radio" class="radio-btn transition ease-in-out duration-300">5</button></li>
           </ul>
         </div>
         <button
