remove `defer` & move js script to end of body

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
       href="https://fonts.googleapis.com/css2?family=Overpass&display=swap"
       rel="stylesheet"
     />
-    <script src="./script.js" defer></script>
     <title>Interactive rating component</title>
   </head>
   <style>
@@ -135,5 +134,7 @@
         >Numan Iftikhar</a
       >.
     </div>
+
+    <script src="./script.js"></script>
   </body>
 </html>
